--- a/Contact.html
+++ b/Contact.html
@@ -105,25 +105,26 @@
 
           <div class="container my-4">
             <div class="row justify-content-center animate__animated animate__backInUp">
-                <div class="col-sm-12 col-md-3 col-lg-3 col-xl-6 mt-12">
-                    <form>
-                        <div class="mb-2">
-                            <label for="txtName" class="form-label">Name</label>
-                            <input type="name" class="form-control" id="txtName" aria-describedby="namelHelp" />
-                            <label for="txtEmail" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="txtEmail" aria-describedby="emailHelp" />
-                        </div>
-                        <div class="mb-2">
-                            <label for="txtMessage" class="form-label">Message</label>
-                            <textarea class="form-control" id="txtMessage" rows="7"></textarea>
-                        </div>
-                        <div class="container d-flex justify-content-end">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                    </form>
-                </div>
+              <div class="col-sm-12 col-md-3 col-lg-3 col-xl-6 mt-3">
+                <form>
+                  <div class="mb-2">
+                    <label for="txtName" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="txtName"  />
+                    <label for="txtEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="txtEmail"  />
+                  </div>
+                  <div class="mb-2">
+                    <label for="txtMessage" class="form-label">Message</label>
+                    <textarea class="form-control" id="txtMessage" rows="7"></textarea>
+                  </div>
+                  <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
+          
       </main>
 
 
