--- a/Details.html
+++ b/Details.html
@@ -1,103 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
-</head>
-<body>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+
+  <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img
-                src="./assets/amazing_brand.png"
-                alt="Logo"
-                width="100"
-                height="30"
-                class="d-inline-block align-text-top"
-              />
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" href="./Home.html">HOME</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./UpcomingEvents.html"
-                    >UPCOMING EVENTS</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./PastEvents.html">PAST EVENTS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./Contact.html">CONTACT</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./Stats.html">STATS</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
-        
-      <main class="container d-flex align-items-center custom-main">
-        <div class="d-flex justify-content-center ">
-          <div class="card mb-10 w-100">
-            <div class="row g-0 d-flex align-items-center">
-              <div class="col-md-6">
-                <img src="./assets/books.jpg" class="img-fluid rounded-start custom-img" alt="books">
-              </div>
-              <div class="col-md-6">
-                <div class="card-body">
-                  <h5 class="card-title">Festival of the collectivities</h5>
-                  <p class="card-text">This is a wider </p>
-                  <p class="card-text">This is a wider </p>
-                  <p class="card-text">This is a wider </p>
-                  <p class="card-text">This is a wider </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </main>
-
-      <footer class="footer">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <div class="d-flex justify-content-between align-items-center">
-            <div>
-              <a href="https://web.facebook.com/" target="_blank">
-                <img src="./assets/facebook.png" alt="facebook" />
-              </a>
-              <a href="https://www.instagram.com/" target="_blank">
-                <img src="./assets/instagram.png" alt="instagram" />
-              </a>
-              <a href="https://web.whatsapp.com/" target="_blank">
-                <img src="./assets/whatsapp.png" alt="whatsapp" />
-              </a>
+          <a class="navbar-brand" href="#">
+            <img
+              src="./assets/amazing_brand.png"
+              alt="Logo"
+              width="100"
+              height="30"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="./Home.html">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./UpcomingEvents.html"
+                  >UPCOMING EVENTS</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./PastEvents.html">PAST EVENTS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Contact.html">CONTACT</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./Stats.html">STATS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main class="container d-flex align-items-center custom-main">
+      <div class="d-flex justify-content-center">
+        <div class="card mb-10 w-100">
+          <div class="row g-0 d-flex align-items-center">
+            <div class="col-md-6">
+              <img
+                src="./assets/books.jpg"
+                class="img-fluid rounded-start custom-img"
+                alt="books"
+              />
             </div>
-            <div>
-              <p class="mb-0">COHORT</p>
+            <div class="col-md-6">
+              <div class="card-body">
+                <h5 class="card-title">Festival of the collectivities</h5>
+                <p class="card-text">Event data</p>
+                <p class="card-text">Event data</p>
+                <p class="card-text">Event data</p>
+                <p class="card-text">Event data</p>
+              </div>
             </div>
           </div>
         </div>
-      </footer>
-</body>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container-fluid">
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
+            <a href="https://web.facebook.com/" target="_blank">
+              <img src="./assets/facebook.png" alt="facebook" />
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="./assets/instagram.png" alt="instagram" />
+            </a>
+            <a href="https://web.whatsapp.com/" target="_blank">
+              <img src="./assets/whatsapp.png" alt="whatsapp" />
+            </a>
+          </div>
+          <div>
+            <p class="mb-0">COHORT</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
